--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
     <div class="full_ios"></div>
     <script src="src/javascript/fullscreen.js"></script> -->
 <!--=================================================================================================================-->
-  </body>
+  <script type="text/javascript" src="bundle.min.js"></script></body>
 </html>
