--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8">
-    <title>Dragon Link Happy Prosperous</title>
+    <title>Dragon1 Link Happy Prosperous</title>
     <link rel="stylesheet" href="src/css/style.css">
   </head>
   <body>
