--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta charset="utf-8">
     <title>Dragon Link Happy Prosperous</title>
     <link rel="stylesheet" href="src/css/style.css">
+    <script " src="/src/scenes/phaser.min.js"></script>
+
   </head>
   <body>
+    <script type="module" src="/src/index.js"></script>
+    <div id="prov"></div>
 <!--=============================================Полноэкранный режим=================================================-->
     <!-- <div class="full_screen"></div>
     <div class="full_ios"></div>
