--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8">
     <title>Dragon1 Link Happy Prosperous</title>
-    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/style.css?v=0.0.1">
     <script " src="/src/scenes/phaser.min.js"></script>
 
   </head>
   <body>
-    <script type="module" src="/src/index.js"></script>
-    <div id="prov"></div>
+    <script type="module" src="/src/index.js?v=0.0.1"></script>
 <!--=============================================Полноэкранный режим=================================================-->
     <!-- <div class="full_screen"></div>
     <div class="full_ios"></div>
