--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8">
     <title>Dragon1 Link Happy Prosperous</title>
-    <link rel="stylesheet" href="src/css/style.css?v=0.0.1">
-    <script " src="/src/scenes/phaser.min.js"></script>
+    <script " src="./phaser.min.js"></script>
 
   </head>
   <body>
-    <script type="module" src="/src/index.js?v=0.0.1"></script>
+    <script type="module" src="./index.js?v=0.0.2"></script>
+    <div id="prov"></div>
 <!--=============================================Полноэкранный режим=================================================-->
     <!-- <div class="full_screen"></div>
     <div class="full_ios"></div>
     <script src="src/javascript/fullscreen.js"></script> -->
 <!--=================================================================================================================-->
-  <script type="text/javascript" src="bundle.min.js"></script></body>
 </html>
