--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8">
     <title>Dragon1 Link Happy Prosperous</title>
-    <script " src="./phaser.min.js"></script>
+    <link rel="stylesheet" href="./style.css?v=0.0.2">
+    <script src="./phaser.min.js"></script>
 
   </head>
   <body>
